<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_course"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/euro" />

        <EditText
            android:id="@+id/editTextNumberEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roubles" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dollars" />

        <EditText
            android:id="@+id/editTextNumberDollars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roubles" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButtonSyncNever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/never" />

        <RadioButton
            android:id="@+id/radioButtonSyncExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_exit" />

        <RadioButton
            android:id="@+id/radioButtonSyncDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_day" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synchronize" />

    <Button
        android:id="@+id/buttonLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_from_file" />
</android.widget.LinearLayout>